Revise README for Wordle v2.0 GUI Edition
Updated the README to reflect the new Wordle v2.0 project, including features, requirements, and usage instructions.